docs: add create task api
