# controllers/doc_response_models.go
@@ -10,3 +10,8 @@ type _ResponseLogin struct {
 	Msg  string      `json:"msg" example:"Success!!"` // 信息
 	Data interface{} `json:"data"`                    // 数据
 }
+
+type _ResponseCreateTask struct {
+	Code ResCode `json:"code" example:"1000"`     // 状态码
+	Msg  string  `json:"msg" example:"Success!!"` // 信息
+}
